[gd_scene load_steps=2 format=3 uid="uid://tutorial_overlay"]

[ext_resource type="Script" path="res://scripts/tutorial_overlay.gd" id="1_tutorial"]

[node name="TutorialOverlay" type="CanvasLayer"]
layer = 100
process_mode = 2
script = ExtResource("1_tutorial")

[node name="Dimmer" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -120.0
offset_right = 180.0
offset_bottom = 120.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "Welcome!"
horizontal_alignment = 1

[node name="BodyLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Tutorial text goes here"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer" type="Control" parent="Panel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="ContinueButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 18
text = "Continue"

[node name="SkipButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 35)
theme_override_font_sizes/font_size = 12
text = "Skip Tutorial"

[node name="HintLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 80.0
offset_right = 200.0
offset_bottom = 130.0
theme_override_colors/font_color = Color(1, 1, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = ""
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Panel/VBox/ContinueButton" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Panel/VBox/SkipButton" to="." method="_on_skip_pressed"]
